@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.967 2008-12-09 19:08:45 castaglia Exp $
+$Id: NEWS,v 1.968 2008-12-09 22:13:05 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -22,6 +22,7 @@ CVS
 - Added Russian translation.
 - Bug 2020 - HideFiles sometimes fails.
 - Bug 3146 - <Directory> paths using glob characters may not match as expected.
+- Bug 3147 - Comma-delimited commands in <Limit> sections not handled properly.
 
 1.3.2rc3 - Released 20-Nov-2008
 --------------------------------
